[Chore] 서버 배포 오류 해결